# llm-council

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh  testprompts.csv
backend/: __init__.py  agreement.py  council.py  csv_utils.py  evaluation.py  main.py  model_provider.py  policy.py  review_reason.py  schemas.py  storage.py  utils.py
data/: annotations.db  demo_prompts.csv  demo_prompts.json  devin.csv  gemini-3.5-flash.csv  haiku4.5.csv  opus4.7.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AnnotateView.jsx  AnnotationDetails.jsx  HumanLabelForm.jsx  QaView.jsx  ResultsView.jsx  ReviewView.jsx  annotationUtils.js
tests/: test_agreement.py  test_api.py  test_council.py  test_csv_utils.py  test_evaluation.py  test_model_provider.py  test_review_reason.py  test_storage.py  test_utils.py
